k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: konnect-frontend
  namespace: konnect

spec:

  replicas: 1

  selector:
    matchLabels:
      app: konnect-frontend

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:

    metadata:
      labels:
        app: konnect-frontend

    spec:

      containers:

        - name: frontend

          image: ghcr.io/kishore-nb1705/konnect-frontend:latest

          ports:

            - containerPort: 80

          resources:

            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 200m
              memory: 256Mi

          readinessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 10
            periodSeconds: 20

      imagePullSecrets:

        - name: ghcr-secret
